--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
     <br>
     <fieldset>
     <div id="iframe-container">
-        <iframe src="https://vivianasnailglam.setmore.com/" frameborder="0"></iframe>
+        <iframe src="https://vivianasnailglam.setmore.com/" style="width: 100%; height: 100%; border: none;"></iframe>
     </div>
 </div>
 </fieldset>
