--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="#home">Home</a>
         <a href="#over-ons">Over Ons</a>
         <a href="#team">Team</a>
-        <a href="#contact">Contact / Adres</a>
+        <a href="#contact">Info</a>
         <a href="#afspraak">Afspraak Maken</a>
     </div>
 
@@ -249,7 +249,7 @@
     <br>
     <fieldset>
     <div id="iframe-container">
-        <iframe src="https://vivianasnailglam.setmore.com/" style="width: 100%; height: 100%; border: none;"></iframe>
+        <iframe src="https://vivianasnailglam.setmore.com/" frameborder="0"></iframe>
     </div>
 </div>
 </fieldset>
