--- a/index.html
+++ b/index.html
@@ -72,6 +72,18 @@
         .social-media a:hover {
             color: #0056b3;
         }
+        .footer {
+            margin-top: 30px;
+            font-size: 12px;
+            color: #6c757d;
+        }
+        .footer a {
+            text-decoration: none;
+            color: #007bff;
+        }
+        .footer a:hover {
+            color: #0056b3;
+        }
     </style>
 </head>
 <body>
@@ -80,16 +92,19 @@
         <p>𝙡𝙖𝙣𝙙𝙞𝙣𝙜𝙨𝙥𝙖𝙜𝙞𝙣𝙖</p>
         <p>Gebruik je een telefoon? Klik op <strong>Mobiele Versie</strong>. Gebruik je een laptop of computer? Klik dan op <strong>Web Versie</strong>.</p>
         <button class="button mobile-button" onclick="window.location.href='mobil.html'">Mobiele Versie</button>
-        <button class="button web-button" onclick="window.location.href='index.html1.html'">web Versie</button>
+        <button class="button web-button" onclick="window.location.href='index.html1.html'">Web Versie</button>
         <div class="info">
             <p>U wordt doorverwezen naar de juiste versie van de website van Viviana's Nail Glam, afhankelijk van uw apparaat. Beide versies bieden dezelfde content, maar zijn geoptimaliseerd voor verschillende schermgroottes.</p>
-            <p>Neem contact met ons op via <a href="mailto:vivianasnailglam@gmail.com">vivianasnailglam@gmail.com</a> voor vragen of hulp.</p>
-            <p>Als de website niet werkt, neem dan contact op met de technische ondersteuning via <a href="mailto:ambex.info@gmail.com">ambex.info@gmail.com</a>.</p>
+            <p>Neem contact met ons op via <a href="mailto:Ambex.NL@outlook.com">Ambex.NL@outlook.com</a> voor vragen of hulp.</p>
+            <p>Als de website niet werkt, neem dan contact op met de technische ondersteuning via <a href="mailto:Ambex.NL@outlook.com">Ambex.NL@outlook.com</a>.</p>
         </div>
         <div class="social-media">
             <a href="https://www.instagram.com/vivianasnailglam/" target="_blank">Instagram</a>
             <a href="https://www.tiktok.com/@vivianasnailglam_" target="_blank">Tiktok</a>
             <a href="https://linktr.ee/VivianasNailGlam" target="_blank">Al onze platforms</a>
+        </div>
+        <div class="footer">
+            <p>Website volledig gemaakt door <a href="https://ambex.nl" target="_blank">Ambex</a>.</p>
         </div>
     </div>
 </body>
