--- a/index.html1.html
+++ b/index.html1.html
@@ -141,12 +141,12 @@
     </div>
 
     <!-- Team -->
-    <div class="section" id="team">
-        <h2>Ons Team</h2>
-        <p><strong>Powerded by  Wealth Wizards </strong></p>
-        <p>Als oprichter en CEO van Wealth Wizards, werk ik eraan om bedrijven, waaronder Viviana's Nail Glam, te ondersteunen bij hun online aanwezigheid.</p>
-        <p>Ons team bestaat uit gepassioneerde professionals die elk hun eigen specialiteit hebben. Of je nu op zoek bent naar een klassieke manicure of een creatieve nail art, wij staan voor je klaar.</p>
-    </div>
+<div class="section" id="team">
+    <h2>Ons Team</h2>
+    <p><strong>Powered by Ambex</strong></p>
+    <p>Als oprichter en CEO van Ambex, werk ik eraan om bedrijven, waaronder Viviana's Nail Glam, te ondersteunen bij hun online aanwezigheid.</p>
+    <p>Ons team bestaat uit gepassioneerde professionals die elk hun eigen specialiteit hebben. Of je nu op zoek bent naar een klassieke manicure of een creatieve nail art, wij staan voor je klaar.</p>
+</div>
 
    
 
