--- a/index.html1.html
+++ b/index.html1.html
@@ -283,8 +283,9 @@
     <!-- Footer -->
     <div class="footer">
         
-        <p>&copy; Wealth Wizards Advisory Group. Alle rechten voorbehouden.</p>
-        <p> Viviana's Nail Glam. </p>
+        <p>&copy; <a href="https://ambex.nl" target="_blank">Ambex</a>. Alle rechten voorbehouden.</p>
+        <p>Viviana's Nail Glam.</p>
+
         <div class="social-media">
             <a href="https://www.instagram.com/vivianasnailglam/" target="_blank">Instagram</a>
             <a href="https://www.tiktok.com/@vivianasnailglam_" target="_blank">Tiktok</a>
