--- a/mobil.html
+++ b/mobil.html
@@ -224,7 +224,8 @@
 
     <!-- Footer -->
     <div class="footer">
-        <p>&copy; Wealth Wizards Advisory Group. Alle rechten voorbehouden.</p>
+        <p>&copy; <a href="https://ambex.nl" target="_blank">Ambex</a>. Alle rechten voorbehouden.</p>
+        <p>Viviana's Nail Glam.</p>
         <p> <a href="dual page carol.html">𝙡𝙖𝙣𝙙𝙞𝙣𝙜𝙨𝙥𝙖𝙜𝙞𝙣𝙖</p>
         <div class="social-media">
             <a href="https://www.instagram.com/vivianasnailglam/" target="_blank">Instagram</a>
