--- a/index.html1.html
+++ b/index.html1.html
@@ -139,12 +139,11 @@
         <h2>Over Ons</h2>
         <p>Bij Viviana's Nail Glam in Amsterdam vindt u een stijlvolle en ontspannende omgeving waar u kunt genieten van hoogwaardige nagelverzorging. Onze salon is gelegen in het hart van Amsterdam West, een levendige buurt met veel winkels en eetgelegenheden, waardoor het een ideale plek is voor een verwenbeurt. Onze locatie is gemakkelijk bereikbaar met het openbaar vervoer en er is voldoende parkeergelegenheid in de buurt. We bieden een uitgebreide reeks nagelverzorgingsdiensten aan, ontworpen om uw nagels er op hun best uit te laten zien en u een luxe ervaring te bieden.</p>
     </div>
-
-    <!-- Team -->
+<!-- Team -->
 <div class="section" id="team">
     <h2>Ons Team</h2>
-    <p><strong>Powered by Ambex</strong></p>
-    <p>Als oprichter en CEO van Ambex, werk ik eraan om bedrijven, waaronder Viviana's Nail Glam, te ondersteunen bij hun online aanwezigheid.</p>
+    <p><strong>Powerded by <a href="http://ambex.nl/">Ambex</a></strong></p>  
+    <p>Als oprichter en CEO van Wealth Wizards, werk ik eraan om bedrijven, waaronder Viviana's Nail Glam, te ondersteunen bij hun online aanwezigheid.</p>
     <p>Ons team bestaat uit gepassioneerde professionals die elk hun eigen specialiteit hebben. Of je nu op zoek bent naar een klassieke manicure of een creatieve nail art, wij staan voor je klaar.</p>
 </div>
 
@@ -282,19 +281,12 @@
 <br>
     <!-- Footer -->
     <div class="footer">
-        
-        <p>&copy; <a href="https://ambex.nl" target="_blank">Ambex</a>. Alle rechten voorbehouden.</p>
+
+        <p>&copy; Ambex. Alle rechten voorbehouden.</p>
         <p>Viviana's Nail Glam.</p>
-
-        <div class="social-media">
-            <a href="https://www.instagram.com/vivianasnailglam/" target="_blank">Instagram</a>
-            <a href="https://www.tiktok.com/@vivianasnailglam_" target="_blank">Tiktok</a>
-            <a href="https://vivianasnailglam.setmore.com/" target="_blank">Boekenpagina</a>
-            <a href="https://linktr.ee/VivianasNailGlam" target="_blank">Al onze platforms</a>
-
-        
+        <br>
+        <p><a href="http://ambex.nl/"> Ambex</a></p>
         </div>
-    </div>
  <!-- Scripts -->
 <!-- Scripts -->
 <!-- Voeg deze script-tags toe in je HTML-bestand -->
