--- a/mobil.html
+++ b/mobil.html
@@ -29,10 +29,15 @@
     </style>
 </head>
 <body>
-    <!-- Header -->
-    <div class="header">
-        <h1>Viviana's Nail Glam</h1>
-    </div>
+ <!-- Header -->
+<div class="header">
+    <h1>
+        <img src="Ambex.png" alt="Ambex Logo">
+        Viviana's Nail Glam
+    </h1>
+</div>
+
+
 
     <!-- Navigatiebalk -->
     <div class="nav">
@@ -160,7 +165,7 @@
     <!-- Team -->
     <div class="section" id="team">
         <h2>Ons Team</h2>
-        <p><strong>Powerded by Wealth Wizards</strong></p>
+        <p><strong>Powerded by <a href="http://ambex.nl/">Ambex</a></strong></p>  
         <p>Als oprichter en CEO van Wealth Wizards, werk ik eraan om bedrijven, waaronder Viviana's Nail Glam, te ondersteunen bij hun online aanwezigheid.</p>
         <p>Ons team bestaat uit gepassioneerde professionals die elk hun eigen specialiteit hebben. Of je nu op zoek bent naar een klassieke manicure of een creatieve nail art, wij staan voor je klaar.</p>
     </div>
@@ -224,8 +229,8 @@
 
     <!-- Footer -->
     <div class="footer">
-        <p>&copy; <a href="https://ambex.nl" target="_blank">Ambex</a>. Alle rechten voorbehouden.</p>
-        <p>Viviana's Nail Glam.</p>
+        <p>&copy; Ambex. Alle rechten voorbehouden.</p>
+        <p><a href="http://ambex.nl/"> Ambex</a></p>
         <p> <a href="dual page carol.html">𝙡𝙖𝙣𝙙𝙞𝙣𝙜𝙨𝙥𝙖𝙜𝙞𝙣𝙖</p>
         <div class="social-media">
             <a href="https://www.instagram.com/vivianasnailglam/" target="_blank">Instagram</a>
