--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
       position: absolute;
       inset: 0;
       z-index: 0;
-      background-image: url('https://placehold.co/1920x1080');
+      background-image: url('https://i.postimg.cc/HsjHdbYR/IMG-5918.jpg');
       background-size: cover;
       background-position: center;
     }
@@ -1228,30 +1228,25 @@
 
           <div class="grid grid-4 gap-4">
             <div class="relative" style="aspect-ratio: 1/1; overflow: hidden; border-radius: var(--radius);">
-              <img src="https://placehold.co/500x500?text=Nail+Design+1" alt="Nail design 1" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s;">
+              <img src="https://i.postimg.cc/W4n4ML4D/Whats-App-Image-2025-04-24-at-19-49-18.jpg" alt="Nail design 1" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s;">
             </div>
             <div class="relative" style="aspect-ratio: 1/1; overflow: hidden; border-radius: var(--radius);">
-              <img src="https://placehold.co/500x500?text=Nail+Design+2" alt="Nail design 2" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s;">
+              <img src="https://i.postimg.cc/vZ5TZ6Ft/Whats-App-Image-2025-04-24-at-19-49-18-1.jpg" alt="Nail design 2" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s;">
             </div>
             <div class="relative" style="aspect-ratio: 1/1; overflow: hidden; border-radius: var(--radius);">
-              <img src="https://placehold.co/500x500?text=Nail+Design+3" alt="Nail design 3" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s;">
+              <img src="https://i.postimg.cc/Fsd1wBTq/Whats-App-Image-2025-04-24-at-19-49-18-4.jpg" alt="Nail design 3" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s;">
             </div>
             <div class="relative" style="aspect-ratio: 1/1; overflow: hidden; border-radius: var(--radius);">
-              <img src="https://placehold.co/500x500?text=Nail+Design+4" alt="Nail design 4" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s;">
+              <img src="https://i.postimg.cc/QNnH43J1/Whats-App-Image-2025-04-24-at-19-49-18-5.jpg" alt="Nail design 4" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s;">
             </div>
             <div class="relative" style="aspect-ratio: 1/1; overflow: hidden; border-radius: var(--radius);">
-              <img src="https://placehold.co/500x500?text=Nail+Design+5" alt="Nail design 5" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s;">
+              <img src="https://i.postimg.cc/vHjyBDDB/Whats-App-Image-2025-04-24-at-19-49-18-2.jpg" alt="Nail design 5" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s;">
             </div>
             <div class="relative" style="aspect-ratio: 1/1; overflow: hidden; border-radius: var(--radius);">
-              <img src="https://placehold.co/500x500?text=Nail+Design+6" alt="Nail design 6" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s;">
-            </div>
-            <div class="relative" style="aspect-ratio: 1/1; overflow: hidden; border-radius: var(--radius);">
-              <img src="https://placehold.co/500x500?text=Nail+Design+7" alt="Nail design 7" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s;">
-            </div>
-            <div class="relative" style="aspect-ratio: 1/1; overflow: hidden; border-radius: var(--radius);">
-              <img src="https://placehold.co/500x500?text=Nail+Design+8" alt="Nail design 8" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s;">
+              <img src="https://i.postimg.cc/vZVs6M6v/Whats-App-Image-2025-04-24-at-19-49-18-3.jpg" alt="Nail design 6" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s;">
             </div>
           </div>
+          
 
           <div class="text-center" style="margin-top: 2rem;">
             <a href="https://instagram.com" target="_blank" rel="noopener noreferrer" style="color: var(--primary-foreground); text-decoration: none; transition: text-decoration 0.3s;">
